<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="733dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mapBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/towerdefensemap_checkerboard_v4"
        android:contentDescription="@string/game_map"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/healthCounter"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:text="@string/health"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/moneyCounter"
        android:layout_width="81dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/money"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthCounter" />

    <ImageView
        android:id="@+id/monument"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:contentDescription="@string/player_monument"
        android:src="@drawable/monument"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mapBackground"
        app:layout_constraintVertical_bias="0.466" />

    <ImageButton
        android:id="@+id/tower1button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/tower_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tower2button"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tower2button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/tower_2"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/tower3button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/tower_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tower2button"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Tower1Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/price1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tower2button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tower1button" />

    <TextView
        android:id="@+id/tower1Cost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tower2button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tower1button" />

    <TextView
        android:id="@+id/Tower2Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:text="@string/price2"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintEnd_toStartOf="@+id/tower3button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tower2button" />

    <TextView
        android:id="@+id/tower2Cost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price2"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintEnd_toStartOf="@+id/tower3button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tower2button" />

    <TextView
        android:id="@+id/Tower3Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/price3"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintStart_toEndOf="@+id/tower3button" />

    <TextView
        android:id="@+id/tower3Cost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price3"
        app:layout_constraintBottom_toBottomOf="@+id/mapBackground"
        app:layout_constraintStart_toEndOf="@+id/tower3button" />

    <com.example.java.GameCanvas
        android:id="@+id/gamecanvas"
        android:layout_width="655dp"
        android:layout_height="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/waveButton"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tower1button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>